--- a/assets/styles/rigs.css
+++ b/assets/styles/rigs.css
@@ -42,20 +42,38 @@
   height: 2in;
   background-color: #333;
   text-align: center;
-  padding: 1in;
+  height: auto;
+}
+/* line 49, rigs.scss */
+.rig-download-section .rds-col-container {
   color: #fff5f5;
   display: flex;
+  height: 100%;
 }
-/* line 51, rigs.scss */
-.rig-download-section h1 {
+/* line 54, rigs.scss */
+.rig-download-section .rds-col-container .rds-col {
+  flex-basis: 50%;
+  height: 100%;
+  padding: 1in;
+}
+/* line 60, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Latest"] {
+  background-image: url("../images/MCRigBackgrouns/SACRThumbnail5.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-color: #00000050;
+  background-blend-mode: multiply;
+}
+/* line 67, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Latest"] h1 {
   font-family: PT_Sans;
 }
-/* line 55, rigs.scss */
-.rig-download-section span {
+/* line 71, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Latest"] span {
   font-family: "Roboto";
 }
-/* line 59, rigs.scss */
-.rig-download-section .download-lr {
+/* line 75, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Latest"] .download-lr {
   background-color: transparent;
   border: none;
   border-radius: 0.3rem;
@@ -85,109 +103,111 @@
   font-family: PT_Sans;
   cursor: pointer;
 }
-/* line 92, rigs.scss */
-.rig-download-section .download-lr:hover {
+/* line 108, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Latest"] .download-lr:hover {
   background-color: #13b6fb95;
   -webkit-box-shadow: 0 4px 0 0 #04a7eb95;
   box-shadow: 0 4px 0 0 #04a7eb95;
 }
-/* line 98, rigs.scss */
-.rig-download-section .download-extra {
+/* line 114, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Latest"] .download-extra {
   text-decoration: none;
 }
-/* line 102, rigs.scss */
-.rig-download-section .download-extra:hover {
+/* line 118, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Latest"] .download-extra:hover {
   text-decoration: underline;
   cursor: pointer;
 }
-/* line 107, rigs.scss */
-.rig-download-section .rds-col {
-  flex-basis: 50%;
+/* line 124, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Experimental"] {
+  background-image: url("../images/MCRigBackgrouns/SACRThumbnail1.png");
+  background-size: cover;
+  background-position: center center;
+  background-color: #00000050;
+  background-blend-mode: multiply;
 }
-/* line 110, rigs.scss */
-.rig-download-section .rds-col img {
-  position: relative;
-  transform: translateY(-15%);
+/* line 131, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Experimental"] h1 {
+  font-family: PT_Sans;
 }
-/* line 116, rigs.scss */
-.rig-download-section .rds-background {
-  flex-basis: 25%;
-  min-width: 600px;
+/* line 135, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Experimental"] span {
+  font-family: "Roboto";
+}
+/* line 139, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Experimental"] .download-lr {
+  background-color: transparent;
+  border: none;
+  border-radius: 0.3rem;
+  -webkit-box-shadow: inset 0 0 0 2px #fff;
+  box-shadow: inset 0 0 0 2px #fff;
+  color: #fff !important;
+  display: block;
+  padding-bottom: 7px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 7px;
+  text-decoration: none !important;
+  -webkit-transition: color 250ms ease-out, background-color 150ms ease-in-out, -webkit-box-shadow 150ms ease-in-out;
+  transition: color 250ms ease-out, background-color 150ms ease-in-out, -webkit-box-shadow 150ms ease-in-out;
+  -o-transition: color 250ms ease-out, background-color 150ms ease-in-out, box-shadow 150ms ease-in-out;
+  transition: color 250ms ease-out, background-color 150ms ease-in-out, box-shadow 150ms ease-in-out;
+  transition: color 250ms ease-out, background-color 150ms ease-in-out, box-shadow 150ms ease-in-out, -webkit-box-shadow 150ms ease-in-out;
+  white-space: nowrap;
+  background-color: #13b6fb;
+  -webkit-box-shadow: 0 4px 0 0 #04a7eb;
+  box-shadow: 0 4px 0 0 #04a7eb;
+  font-size: 1.5rem;
+  width: 250px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-family: PT_Sans;
+  cursor: pointer;
+}
+/* line 172, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Experimental"] .download-lr:hover {
+  background-color: #13b6fb95;
+  -webkit-box-shadow: 0 4px 0 0 #04a7eb95;
+  box-shadow: 0 4px 0 0 #04a7eb95;
+}
+/* line 178, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Experimental"] .download-extra {
+  text-decoration: none;
+}
+/* line 182, rigs.scss */
+.rig-download-section .rds-col-container .rds-col[data-label="Experimental"] .download-extra:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
-/* line 124, rigs.scss */
+/* line 197, rigs.scss */
 .features-sacr {
   margin-left: 1in;
   margin-right: 1in;
 }
-/* line 128, rigs.scss */
+/* line 201, rigs.scss */
 .features-sacr h2 {
   font-family: PT_Sans;
   text-align: center;
   font-size: 36px;
 }
-/* line 134, rigs.scss */
+/* line 207, rigs.scss */
 .features-sacr .highlight-features {
   width: 1000px;
   margin: 0 auto;
   background-color: #f3f3f3;
   padding: 10px;
 }
-/* line 140, rigs.scss */
+/* line 213, rigs.scss */
 .features-sacr .highlight-features h2 {
   text-align: left;
   font-size: 24px;
 }
-/* line 146, rigs.scss */
+/* line 219, rigs.scss */
 .features-sacr .highlight-features .row-1-col .feat-overlay {
   font-family: "Noto Sans JP";
   height: 100px;
-}
-
-/* line 155, rigs.scss */
-.sacr-experimental .overlay {
-  background-image: url(../images/MCRigBackgrouns/SACRThumbnail2.PNG);
-  color: white;
-  background-color: #33333390;
-  background-blend-mode: multiply;
-}
-/* line 161, rigs.scss */
-.sacr-experimental .overlay .header {
-  border: 2px solid white;
-}
-/* line 165, rigs.scss */
-.sacr-experimental .overlay .header h1 {
-  border-bottom: 2px solid white;
-}
-/* line 172, rigs.scss */
-.sacr-experimental .overlay .download .button {
-  background-color: red;
-  text-align: center;
-  width: 60%;
-}
-/* line 177, rigs.scss */
-.sacr-experimental .overlay .download .button div {
-  padding: 5px;
-  border: 4px solid;
-  text-align: center;
-  display: inline-block;
-}
-/* line 187, rigs.scss */
-.sacr-experimental .overlay .download .button .latest {
-  background-color: #20AB00;
-  border-color: #1D5200;
-  width: 250px;
-  border-radius: 10px;
-}
-/* line 194, rigs.scss */
-.sacr-experimental .overlay .download .button .browse-git {
-  background-color: #222;
-  border-color: #111;
-  color: white;
-  width: 192.3076923077px;
-  border-top-width: 0px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
 }
 
 /*# sourceMappingURL=rigs.css.map */
