--- a/assets/styles/main_style.css
+++ b/assets/styles/main_style.css
@@ -2,7 +2,6 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import url("bootstrap-integration.css");
-/* line 14, main_style.scss */
 body {
   margin: 0;
   font-family: "PT_Sans";
@@ -14,493 +13,255 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   height: 100%;
-  width: 100%;
-}
-/* line 27, main_style.scss */
-body .viewport {
-  transition: 0.5s;
-}
-/* line 31, main_style.scss */
-body .sideNav {
-  height: 100%;
-  width: 0px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 60px;
-  transition: 0.5s;
-  font-family: minecraftia;
-}
-/* line 44, main_style.scss */
-body .sideNav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-  font-family: "PT_Sans";
-  border-bottom: 0px;
-}
-/* line 54, main_style.scss */
-body .sideNav a {
-  padding: 8px 8px 0px 32px;
-  text-decoration: none;
-  font-size: 16px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-  cursor: pointer;
-  border-bottom: 2px solid #555555;
-}
-/* line 64, main_style.scss */
-body .sideNav a:hover {
-  color: #f1f1f1;
-}
-/* line 69, main_style.scss */
-body .sideNav .active {
-  color: #FCB5DE;
-}
+  width: 100%; }
+  body .viewport {
+    transition: 0.5s; }
+  body .sideNav {
+    height: 100%;
+    width: 0px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 0.5s;
+    font-family: minecraftia; }
+    body .sideNav .closebtn {
+      position: absolute;
+      top: 0;
+      right: 25px;
+      font-size: 36px;
+      margin-left: 50px;
+      font-family: "PT_Sans";
+      border-bottom: 0px; }
+    body .sideNav a {
+      padding: 8px 8px 0px 32px;
+      text-decoration: none;
+      font-size: 16px;
+      color: #818181;
+      display: block;
+      transition: 0.3s;
+      cursor: pointer;
+      border-bottom: 2px solid #555555; }
+      body .sideNav a:hover {
+        color: #f1f1f1; }
+    body .sideNav .active {
+      color: #FCB5DE; }
 
-/* line 77, main_style.scss */
 .above-nav {
   background-color: #222;
-  color: white;
-}
-/* line 81, main_style.scss */
-.above-nav .logo {
-  color: white;
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  width: 100px;
-  text-align: center;
-  box-shadow: 0px 0 inset #222;
-  background-color: #292929;
-  text-decoration: none;
-  transition: 200ms;
-  text-indent: 0in;
-}
-/* line 93, main_style.scss */
-.above-nav .logo span {
-  pointer-events: none;
-}
-/* line 98, main_style.scss */
-.above-nav .xmasCounter {
-  color: white;
-  float: right;
-  display: inline;
-  padding: 0.5rem 1rem;
-  width: auto;
-  text-align: center;
-  box-shadow: 0px 0 inset #222;
-  background-color: #28d411;
-  text-decoration: none;
-  transition: 200ms;
-  text-indent: 0in;
-}
-/* line 111, main_style.scss */
-.above-nav .xmasCounter span {
-  pointer-events: none;
-}
-/* line 116, main_style.scss */
-.above-nav .info {
-  display: inline-block;
-  padding-left: 1em;
-}
+  color: white; }
+  .above-nav .logo {
+    color: white;
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    width: 200px;
+    text-align: center;
+    box-shadow: 0px 0 inset #222;
+    background-color: #292929;
+    text-decoration: none;
+    transition: 200ms;
+    text-indent: 0in; }
+    .above-nav .logo .text {
+      pointer-events: none;
+      position: relative;
+      display: inline-block;
+      transform: translateY(-3px); }
+    .above-nav .logo .material-icons {
+      cursor: pointer;
+      position: relative;
+      display: inline-block;
+      transform: translateY(2px); }
+  .above-nav .xmasCounter {
+    color: white;
+    float: right;
+    display: inline;
+    padding: 0.5rem 1rem;
+    width: auto;
+    text-align: center;
+    box-shadow: 0px 0 inset #222;
+    background-color: #28d411;
+    text-decoration: none;
+    transition: 200ms;
+    text-indent: 0in; }
+    .above-nav .xmasCounter span {
+      pointer-events: none; }
+  .above-nav .info {
+    display: inline-block;
+    padding-left: 1em; }
 
-/* line 122, main_style.scss */
 .nav {
-  background-color: #242424;
-}
-/* line 125, main_style.scss */
-.nav .nav-link {
-  width: 100px;
-  text-align: center;
-  color: white;
-  cursor: pointer;
-  box-shadow: 0 0 0 0px inset #FCB5DE;
-  transition-property: all;
-}
-/* line 133, main_style.scss */
-.nav .nav-link:hover {
-  color: black;
-  box-shadow: 0 -3em inset #FCB5DE;
-}
-/* line 141, main_style.scss */
-.nav .disabled {
-  color: grey;
-  text-decoration: line-through;
-  border-bottom: 4px solid #F10000;
-  box-shadow: none;
-}
-/* line 147, main_style.scss */
-.nav .disabled:hover {
-  box-shadow: 0 -3em inset #F10000;
-}
-/* line 152, main_style.scss */
-.nav .active {
-  color: #FCB5DE;
-  border-bottom: 4px solid #FCB5DE;
-  box-shadow: none;
-}
-/* line 157, main_style.scss */
-.nav .active:hover {
-  box-shadow: 0 -3em inset #FCB5DE;
-  color: black;
-}
+  background-color: #242424; }
+  .nav .nav-link {
+    width: 100px;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0 0 0 0px inset #FCB5DE;
+    transition-property: all; }
+    .nav .nav-link:hover {
+      color: black;
+      box-shadow: 0 -3em inset #FCB5DE; }
+  .nav .disabled {
+    color: grey;
+    text-decoration: line-through;
+    border-bottom: 4px solid #F10000;
+    box-shadow: none; }
+    .nav .disabled:hover {
+      box-shadow: 0 -3em inset #F10000; }
+  .nav .active {
+    color: #FCB5DE;
+    border-bottom: 4px solid #FCB5DE;
+    box-shadow: none; }
+    .nav .active:hover {
+      box-shadow: 0 -3em inset #FCB5DE;
+      color: black; }
 
 /* 
 
 */
-/* line 170, main_style.scss */
 .header-contain {
   width: 100%;
   height: 5in;
   background-size: cover;
-  background-position: center;
-}
-/* line 176, main_style.scss */
-.header-contain .header-content {
-  background-image: url("https://sakura-sedaia.com/assets/images/WPRenders/BarSet_Preview4.png");
-  background-size: cover;
-}
-/* line 180, main_style.scss */
-.header-contain .header-content .header-text {
-  position: absolute;
-  transform: translateY(1.5in);
-}
-/* line 184, main_style.scss */
-.header-contain .header-content .header-text h1 {
-  font-family: PT_Sans;
-  font-weight: bold;
-  color: #fff5f5;
-  text-indent: 1in;
-}
-/* line 191, main_style.scss */
-.header-contain .header-content .header-text h4 {
-  color: #fff5f5;
-  font-family: Minecraft;
-  text-indent: 0.75in;
-}
+  background-position: center; }
+  .header-contain .header-content {
+    background-size: cover; }
+    .header-contain .header-content .header-text {
+      position: absolute;
+      transform: translateY(1.5in); }
+      .header-contain .header-content .header-text h1 {
+        font-family: PT_Sans;
+        font-weight: bold;
+        color: #fff5f5;
+        text-indent: 1in; }
+      .header-contain .header-content .header-text h4 {
+        color: #fff5f5;
+        font-family: Minecraft;
+        text-indent: 0.75in; }
 
-/* line 200, main_style.scss */
-.links {
-  color: white;
-  text-decoration: none;
-  transition: 500ms;
-}
-
-/* line 206, main_style.scss */
-.links:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-/* line 216, main_style.scss */
 .deprication-warning {
   border-top: 2px solid #ff2222;
   border-bottom: 2px solid #ff2222;
   padding: 10px;
   background-color: #ad0000;
   color: white;
-  font-family: "Open Sans";
-}
-/* line 224, main_style.scss */
-.deprication-warning strong {
-  font-family: "Noto Sans JP";
-}
+  font-family: "Open Sans"; }
+  .deprication-warning strong {
+    font-family: "Noto Sans JP"; }
 
-/* line 232, main_style.scss */
 .content-section {
   width: 100%;
-  height: auto;
-}
-/* line 236, main_style.scss */
-.content-section .about {
-  background-color: white;
-}
-/* line 239, main_style.scss */
-.content-section .about .title {
-  padding: 0.5in;
-}
-/* line 242, main_style.scss */
-.content-section .about .title h1 {
-  font-family: PT_Sans;
-}
-/* line 246, main_style.scss */
-.content-section .about .title p {
-  font-family: "Source Sans Pro", sans-serif;
-}
-/* line 254, main_style.scss */
-.content-section .index-rig-display {
-  width: 100%;
-  height: 3.23in;
-  overflow: hidden;
-}
-/* line 259, main_style.scss */
-.content-section .index-rig-display .content {
-  position: relative;
-  z-index: 999;
-  font-family: "Source Sans Pro", sans-serif;
-  transform: translateY(-3.23in);
-  text-align: center;
-  background-blend-mode: linear;
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1));
-  height: 3.23in;
-  width: 100%;
-  margin: 0 auto;
-}
-/* line 274, main_style.scss */
-.content-section .index-rig-display .content .rig-display-text {
+  height: auto; }
+  .content-section .about {
+    background-color: white; }
+    .content-section .about .title {
+      padding: 0.5in; }
+      .content-section .about .title h1 {
+        font-family: PT_Sans; }
+      .content-section .about .title p {
+        font-family: "Source Sans Pro", sans-serif; }
+  .content-section .index-rig-display {
+    width: 100%;
+    height: 3.23in;
+    overflow: hidden; }
+    .content-section .index-rig-display .content {
+      position: relative;
+      z-index: 999;
+      font-family: "Source Sans Pro", sans-serif;
+      transform: translateY(-3.23in);
+      text-align: center;
+      background-blend-mode: linear;
+      background-image: linear-gradient(to top, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1));
+      height: 3.23in;
+      width: 100%;
+      margin: 0 auto; }
+      .content-section .index-rig-display .content .rig-display-text {
+        color: white;
+        padding-top: 50px;
+        font-family: PT_Sans;
+        padding-bottom: 30px; }
+      .content-section .index-rig-display .content .btn {
+        display: inline-block;
+        color: #000;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 45px;
+        margin: 0 0 2em;
+        max-width: 160px;
+        position: relative;
+        text-decoration: none;
+        text-transform: uppercase;
+        width: 100%;
+        background-color: #FFFFFF50;
+        box-shadow: 1px 1px 5px black;
+        transition: 200ms; }
+        .content-section .index-rig-display .content .btn:hover {
+          text-decoration: none;
+          box-shadow: 5px 5px 10px black;
+          background-color: white; }
+    .content-section .index-rig-display .background {
+      width: 100%;
+      margin: 0 auto;
+      z-index: -1;
+      height: 3.23in;
+      background-position: center;
+      filter: blur(5px);
+      transform: scale(1.1);
+      background-image: url("../images/MCRigBackgrouns/SACRThumbnail5.jpg"); }
+
+.links {
   color: white;
-  padding-top: 50px;
-  font-family: PT_Sans;
-  padding-bottom: 30px;
-}
-/* line 283, main_style.scss */
-.content-section .index-rig-display .content .btn {
-  display: inline-block;
-  color: #fff;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 45px;
-  margin: 0 0 2em;
-  max-width: 160px;
-  position: relative;
   text-decoration: none;
-  text-transform: uppercase;
-  width: 100%;
-}
-@media (min-width: 600px) {
-  /* line 283, main_style.scss */
-  .content-section .index-rig-display .content .btn {
-    margin: 0 1em 2em;
-  }
-}
-/* line 319, main_style.scss */
-.content-section .index-rig-display .content .btn:hover {
-  text-decoration: none;
-}
-/* line 324, main_style.scss */
-.content-section .index-rig-display .content .btn-4 {
-  border: 1px solid;
-  overflow: hidden;
-  position: relative;
-  transition: 500ms;
-}
-/* line 330, main_style.scss */
-.content-section .index-rig-display .content .btn-4 span {
-  z-index: 20;
-}
-/* line 334, main_style.scss */
-.content-section .index-rig-display .content .btn-4:after {
-  background: #fff;
-  content: "";
-  height: 155px;
-  left: -75px;
-  opacity: 0.2;
-  position: absolute;
-  top: -50px;
-  transform: rotate(35deg);
-  transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
-  width: 50px;
-  z-index: -10;
-}
-/* line 348, main_style.scss */
-.content-section .index-rig-display .content .btn-4:before {
-  background-color: #ffb3cb00;
-  content: "";
-  height: 155px;
-  left: 0;
-  position: absolute;
-  width: 100%;
-  z-index: -10;
-  transition: 500ms;
-}
-/* line 360, main_style.scss */
-.content-section .index-rig-display .content .btn-4:hover {
-  color: black;
-}
-/* line 363, main_style.scss */
-.content-section .index-rig-display .content .btn-4:hover:after {
-  left: 120%;
-  transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
-}
-/* line 368, main_style.scss */
-.content-section .index-rig-display .content .btn-4:hover:before {
-  background-color: #ffb3cb;
-  content: "";
-  height: 155px;
-  left: 0;
-  position: absolute;
-  width: 100%;
-  z-index: -10;
-}
-/* line 380, main_style.scss */
-.content-section .index-rig-display .background {
-  width: 100%;
-  margin: 0 auto;
-  z-index: -1;
-  height: 3.23in;
-  background-position: center;
-  filter: blur(5px);
-  transform: scale(1.1);
-}
+  transition: 500ms; }
 
-/* line 392, main_style.scss */
-.latest-video {
-  height: 4in;
-}
-/* line 395, main_style.scss */
-.latest-video .title {
-  text-align: center;
-}
-/* line 398, main_style.scss */
-.latest-video .title h1 {
-  font-family: "Open Sans";
-}
-/* line 403, main_style.scss */
-.latest-video .container {
-  display: flex;
-}
-/* line 406, main_style.scss */
-.latest-video .container .col {
-  flex-basis: 50%;
-}
-/* line 411, main_style.scss */
-.latest-video .container .video {
-  text-align: center;
-  flex-basis: 700px;
-}
-/* line 415, main_style.scss */
-.latest-video .container .video iframe {
-  display: inline;
-}
-/* line 422, main_style.scss */
-.latest-video .container .meta h2,
-.latest-video .container .meta h3 {
-  font-family: "PT_sans";
-}
-/* line 427, main_style.scss */
-.latest-video .container .meta div {
-  font-family: "Noto Sans JP";
-}
+.links:hover {
+  text-decoration: underline;
+  cursor: pointer; }
 
-/*
-# Integrate Google Material Icons
-# Website: https://material.io/resources/icons/?style=baseline
-*/
-/* line 444, main_style.scss */
-.footer .footer-desktop {
-  background-color: #232323;
-  color: white;
-}
-/* line 448, main_style.scss */
-.footer .footer-desktop .footer-top-container {
-  display: flex;
-  border-bottom: 2px solid #323232;
-}
-/* line 452, main_style.scss */
-.footer .footer-desktop .footer-top-container .left-section {
-  min-width: 160px;
-  border-right: 2.5px solid #323232;
-  transition: 500ms;
-  text-align: left;
-  flex-basis: 50%;
-  height: 1.25in;
-}
-/* line 460, main_style.scss */
-.footer .footer-desktop .footer-top-container .left-section div {
-  padding-top: 12px;
-  padding-left: 30px;
-  list-style-type: none;
-}
-/* line 467, main_style.scss */
-.footer .footer-desktop .footer-top-container .right-section {
-  padding-left: 2.5px;
-  transition: 500ms;
-  min-width: 160px;
-  flex-basis: 50%;
-  border-left: 2px solid #323232;
-  position: relative;
-  text-align: right;
-  height: 1.25in;
-}
-/* line 477, main_style.scss */
-.footer .footer-desktop .footer-top-container .right-section .footer-icon {
-  padding-top: 10px;
-  padding-right: 30px;
-}
-/* line 481, main_style.scss */
-.footer .footer-desktop .footer-top-container .right-section .footer-icon .fab {
-  font-size: 23px;
-}
-/* line 488, main_style.scss */
-.footer .footer-desktop .footer-bottom-container {
-  text-align: center;
-}
-
-/* line 496, main_style.scss */
 .yt-links-thick {
   color: black;
   transition: 250ms;
   text-decoration: none;
-  border-bottom: 4px solid rgba(255, 0, 0, 0);
-}
+  border-bottom: 4px solid rgba(255, 0, 0, 0); }
 
-/* line 503, main_style.scss */
 .yt-links-thick:hover {
   color: red;
   cursor: pointer;
-  border-bottom: 4px solid red;
-}
+  border-bottom: 4px solid red; }
 
-/* line 509, main_style.scss */
 .yt-links-thin {
   color: black;
   transition: 250ms;
   text-decoration: none;
-  border-bottom: 2px solid rgba(255, 0, 0, 0);
-}
+  border-bottom: 2px solid rgba(255, 0, 0, 0); }
 
-/* line 516, main_style.scss */
 .yt-links-thin:hover {
   color: red;
   cursor: pointer;
-  border-bottom: 2px solid red;
-}
+  border-bottom: 2px solid red; }
 
-/* line 522, main_style.scss */
-.sildeer-link {
+.about-link {
   color: black;
   transition: 250ms;
   text-decoration: none;
-  border-bottom: 2px solid #adf6ff00;
-}
+  border-bottom: 2px solid #adf6ff00; }
 
-/* line 529, main_style.scss */
-.sildeer-link:hover {
-  color: #adf6ff;
+.about-link:hover {
+  color: #D60000;
   cursor: pointer;
-  border-bottom: 2px solid;
-}
+  border-bottom: 2px solid; }
 
-/* line 534, main_style.scss */
 .mc-link {
   color: black;
   transition: 250ms;
   text-decoration: none;
-  border-bottom: 2px solid #adf6ff00;
-}
+  border-bottom: 2px solid #adf6ff00; }
 
-/* line 541, main_style.scss */
 .mc-link:hover {
   color: #11ec1c;
   cursor: pointer;
-  border-bottom: 2px solid;
-}
-
-/*# sourceMappingURL=main_style.css.map */
+  border-bottom: 2px solid; }
