--- a/assets/styles/main_style.css
+++ b/assets/styles/main_style.css
@@ -57,20 +57,21 @@ body {
     color: white;
     display: inline-block;
     padding: 0.5rem 1rem;
-    width: 200px;
-    text-align: center;
+    width: 130px;
+    text-align: left;
     box-shadow: 0px 0 inset #222;
     background-color: #292929;
     text-decoration: none;
     transition: 200ms;
-    text-indent: 0in; }
+    text-indent: 0in;
+    cursor: pointer; }
     .above-nav .logo .text {
       pointer-events: none;
       position: relative;
       display: inline-block;
       transform: translateY(-3px); }
     .above-nav .logo .material-icons {
-      cursor: pointer;
+      pointer-events: none;
       position: relative;
       display: inline-block;
       transform: translateY(2px); }
@@ -243,25 +244,3 @@ body {
   color: red;
   cursor: pointer;
   border-bottom: 2px solid red; }
-
-.about-link {
-  color: black;
-  transition: 250ms;
-  text-decoration: none;
-  border-bottom: 2px solid #adf6ff00; }
-
-.about-link:hover {
-  color: #D60000;
-  cursor: pointer;
-  border-bottom: 2px solid; }
-
-.mc-link {
-  color: black;
-  transition: 250ms;
-  text-decoration: none;
-  border-bottom: 2px solid #adf6ff00; }
-
-.mc-link:hover {
-  color: #11ec1c;
-  cursor: pointer;
-  border-bottom: 2px solid; }
