--- a/assets/styles/main_style.scss
+++ b/assets/styles/main_style.scss
@@ -249,6 +249,19 @@ body {
         height: $height-tworow;
         overflow: hidden;
 		
+		.background {
+			width: 100%;
+            margin: 0 auto;
+            z-index: -1;
+            height: $height-tworow;
+            background-position: center;
+            filter: blur(5px);
+            transform: scale(1.1);
+			background-image: url("../images/MCRigBackgrouns/SACRThumbnail5.jpg");
+			content: "";
+			position: relative;
+			z-index: -1;
+		}
 		
         .content {
             position: relative;
@@ -264,19 +277,6 @@ body {
             height: $height-tworow;
             width: 100%;
             margin: 0 auto;
-&::before {
-			width: 100%;
-            margin: 0 auto;
-            z-index: -1;
-            height: $height-tworow;
-            background-position: center;
-            filter: blur(5px);
-            transform: scale(1.1);
-			background-image: url("../images/MCRigBackgrouns/SACRThumbnail5.jpg");
-			content: "";
-			position: relative;
-			z-index: -1;
-		}
             .rig-display-text {
                 color: white;
                 padding-top: 50px;
