--- a/assets/styles/main_style.css
+++ b/assets/styles/main_style.css
@@ -168,6 +168,18 @@ body {
     width: 100%;
     height: 3.23in;
     overflow: hidden; }
+    .content-section .index-rig-display .background {
+      width: 100%;
+      margin: 0 auto;
+      z-index: -1;
+      height: 3.23in;
+      background-position: center;
+      filter: blur(5px);
+      transform: scale(1.1);
+      background-image: url("../images/MCRigBackgrouns/SACRThumbnail5.jpg");
+      content: "";
+      position: relative;
+      z-index: -1; }
     .content-section .index-rig-display .content {
       position: relative;
       z-index: 999;
@@ -179,18 +191,6 @@ body {
       height: 3.23in;
       width: 100%;
       margin: 0 auto; }
-      .content-section .index-rig-display .content::before {
-        width: 100%;
-        margin: 0 auto;
-        z-index: -1;
-        height: 3.23in;
-        background-position: center;
-        filter: blur(5px);
-        transform: scale(1.1);
-        background-image: url("../images/MCRigBackgrouns/SACRThumbnail5.jpg");
-        content: "";
-        position: relative;
-        z-index: -1; }
       .content-section .index-rig-display .content .rig-display-text {
         color: white;
         padding-top: 50px;
