--- a/sacr-wiki/wiki_assets/wiki-home.css
+++ b/sacr-wiki/wiki_assets/wiki-home.css
@@ -18,7 +18,7 @@ h1 {
 
 h2 {
     font-family: "Noto Sans JP", sans-serif;
-    background: rgb(124, 59, 217);
+    background-color: rgb(124, 59, 217);
     background: linear-gradient(42deg,
             rgb(107, 95, 124) 0%,
             rgba(146, 59, 217, 1) 100%);
@@ -49,19 +49,39 @@ h3 {
     padding: 1in;
 }
 
-.portal {
+.sacr-section {
     text-align: center;
+    background-color: grey;
+    margin-left: 1in;
+    margin-right: 1in;
 }
 
-
-.sacr-diagram {
-    text-align: center;
+.sacr-col-contain {
+    display: flex;
 }
 
-.sacr-diagram div {
+.flexbox-2 {
+    flex-basis: 50%;
+}
+
+.sacr-desc {
+    margin-left: .5in;
+    text-align: center;
+    margin-right: .5in;
+}
+
+.sacr-flex-container div {
     display: flex;
     text-align: center;
     justify-content: center;
+}
+
+.sacr-flex-container {
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.25);
+
+    padding-top: .25in;
+    padding-bottom: .25in;
 }
 
 .diagram-item {
@@ -76,12 +96,15 @@ h3 {
     background-color: rgba(0, 0, 0, 0.0);
     transition-duration: 250ms;
     cursor: pointer;
+    box-shadow: 0 0 0 inset rgba(0, 0, 0, 0.5);
 }
 
 .diagram-item:hover {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.25);
     background-blend-mode: multiply;
     color: rgba(242, 242, 242, 1.0);
+
+    box-shadow: 1px 3px 5px inset rgba(0, 0, 0, 0.5);
 }
 
 .diagram-item span {
@@ -112,4 +135,26 @@ h3 {
 
 .h-lrg {
     height: 150px;
+}
+
+.button {
+    width: 125px;
+    background-color: rgb(124, 59, 217);
+    background-image: linear-gradient(42deg,
+            rgb(107, 95, 124) 0%,
+            rgba(146, 59, 217, 1) 100%);
+    background-blend-mode: overlay;
+    display: inline-block;
+    padding-top: 5px;
+    padding: 10px;
+    border-radius: 20px;
+    border: 3px solid #f5f5f5;
+    color: white;
+    font-family: "Noto Sans JP";
+    cursor: pointer;
+}
+.button:hover {
+    border-color: rgb(124, 59, 217);
+    background-color: #f5f5f5;
+    color: rgb(124, 59, 217);
 }
