--- a/assets/styles/main_style.scss
+++ b/assets/styles/main_style.scss
@@ -174,7 +174,7 @@ body {
     background-position: center;
 
     .header-content {
-        background-image: url('https://sakura-sedaia.com/assets/images/WPRenders/BarSet_Preview4.png');
+        background-image: url('assets/images/WPRenders/Happy_Bday.jpg');
         background-size: cover;
 
         .header-text {
